cmake_minimum_required(VERSION 3.20)

project(test VERSION 1.0)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

#add_executable(Exe main.cpp)
#add_executable(move move.cpp)
#add_executable(heap heap.cpp)
#add_executable(calc calc.c)
#add_executable(calc2 calc2.c)
#add_executable(vector vector.cpp)
#add_executable(hash hash-map.cpp)
#add_executable(rand random.cpp)
add_executable(permutations_i permutations_i.cc)